--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 @import url("https://unpkg.com/@tailwindcss/typography@0.3.x/dist/typography.min.css");
 @import url("https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Castoro:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Frijole&family=Montserrat:wght@500;600;700&family=Pattaya&display=swap");
 
 .headerFont {
   font-family: "Castoro";
+}
+
+.tabFont {
+  font-family: "Montserrat";
 }
 
 html {
