--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,12 @@ main {
   .rightText {
     margin-left:0.375rem;
   }
+
+  .projHeader {
+    margin-left: 5rem;
+    margin-right: 5rem;
+    margin-bottom: 2.5rem;
+  }
 }
 
 @media screen and (max-width: 539px) and (max-height: 822px){
@@ -152,6 +158,7 @@ main {
   .rightText {
     margin-left:0.375rem;
   }
+
 }
 
 @media screen and (max-width: 410px) {
@@ -200,6 +207,12 @@ main {
 
   .rightText {
     margin-left:0.375rem;
+  }
+
+  .projHeader {
+    margin-left: 4.5rem;
+    margin-right: 4.5rem;
+    margin-bottom: 2rem;
   }
 
 }
@@ -252,6 +265,12 @@ main {
     margin-left:0.375rem;
   }
 
+  .projSection {
+    margin-left: 1.75rem;
+    margin-right: 2rem;
+  }
+
+
 }
 
 @media screen and (max-width: 374px){
@@ -299,6 +318,46 @@ main {
   .rightText {
     margin-left:0.375rem;
   }
+
+  .projHeader{
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-bottom: 2rem;
+  }
+
+  .projArticle {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .projSection {
+    margin-left: 1.75rem;
+  }
+
+  .techSpan {
+    font-size: 1rem;
+    line-height: 1.75rem;
+  }
+
+  .techHeader {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .attributesDiv {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .projHeader {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+
+
 }
 
 
@@ -347,6 +406,52 @@ main {
   .rightText {
     margin-left:0.375rem;
   }
+
+  .projHeader{
+    font-size: 1rem;
+    line-height: 1.5rem;
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-bottom: 2rem;
+  }
+
+  .projArticle {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .projSection {
+    margin-left: 1.75rem;
+  }
+
+  .techSpan {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .techIcon {
+    width: 2rem;
+    height:2rem;
+  }
+
+  .fiSpan {
+    font-size: 0.75rem;
+    line-height: 1rem;
+    letter-spacing: -0.025em;
+  }
+
+  .apiSpan {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .descriptionP {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+  
 }
 
   @media screen and (max-width: 319px){
@@ -394,6 +499,7 @@ main {
     .rightText {
       margin-left:0.375rem;
     }
+
   }
 
 
