--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,9 @@
   color: rgb(207,75,70);
 }
 
-/* main {
-
-} */
-
+body, html{
+  background-color: rgb(44, 86, 218);
+}
 
 .bgImageOffWhite {
   background-color: rgb(234,218,181);
