--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@
   color: rgb(207,75,70);
 }
 
+.offWhite {
+  color: rgb(234,218,181);
+}
+
 
 .bgImageOffWhite {
   background-color: rgb(234,218,181);
