--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@
   color: rgb(234,218,181);
 }
 
+main {
+  background-size: cover;
+}
+
 
 .bgImageOffWhite {
   background-color: rgb(234,218,181);
@@ -35,13 +39,6 @@
 
 
 @media screen and (max-width: 639px){
-  /* .textDiv {
-    top: 9%;
-    left: 49%;
-    font-size: 1.5rem;
-    line-height: 1.25rem;
-  } */
-
   .textDiv {
     top: 9%;
     left: 48%;
@@ -219,13 +216,6 @@
     padding-bottom: 31.5rem;
   }
 
-  /* .textDiv {
-    top: 11%;
-    left: 49%;
-    font-size: 1rem;
-    line-height: 1.25rem;
-  } */
-
     .textDiv {
     top: 4%;
     left: 48%;
@@ -349,12 +339,6 @@
     padding-bottom: 23rem;
   }
 
-  /* .textDiv {
-    top: 9%;
-    left: 49%;
-    font-size: 1rem;
-    line-height: 1.25rem;
-  } */
 
   .textDiv {
     top: 5%;
@@ -446,13 +430,6 @@
     padding-top: 4rem;
     padding-bottom: 19.5rem;
   }
-
-  /* .textDiv {
-    top: 8%;
-    left: 49%;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  } */
 
   .textDiv {
     top: 4.5%;
