--- a/src/index.css
+++ b/src/index.css
@@ -392,11 +392,11 @@ main {
     line-height: 1.75rem;
   }
 
-  .attributesDiv {
+  /* .attributesDiv {
     --tw-space-x-reverse: 0;
     margin-right: calc(0.25rem * var(--tw-space-x-reverse));
     margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-  }
+  } */
 
   .projHeader {
     margin-left: 3rem;
